--- a/01_blog_application/blog/templates/blog/post/list.html
+++ b/01_blog_application/blog/templates/blog/post/list.html
@@ -1,7 +1,9 @@
 {% extends "blog/base.html" %}
 {% block title %}My Blog{% endblock %}
 {% block content %}
-    <h1>My Blog</h1>
+<h1>
+    <a href="{% url 'blog:post_list' %}">My Blog</a>
+</h1>
     {% for post in posts %}
         <article class="post">
             <h2>
@@ -17,4 +19,5 @@
             </div>
         </article>
     {% endfor %}
+    {% include "pagination.html" with page=posts %}
 {% endblock %}
