--- a/01_blog_application/blog/templates/blog/post/list.html
+++ b/01_blog_application/blog/templates/blog/post/list.html
@@ -4,6 +4,9 @@
 <h1>
     <a href="{% url 'blog:post_list' %}">My Blog</a>
 </h1>
+{% if tag %}
+<h2 class='tags'>Posts tagged with "{{ tag.name }}"</h2>
+{% endif %}
     {% for post in posts %}
         <article class="post">
             <h2>
@@ -11,6 +14,13 @@
                     {{ post.title }}
                 </a>
             </h2>
+            <p class="tags">Tags:
+                {% for tag in post.tags.all %}
+                <a href="{% url "blog:post_list_by_tag" tag.slug %}">
+                {{ tag.name }}
+                </a>{% if not forloop.last %}, {% endif %}
+                {% endfor %}
+            </p>
             <p class="date">
                 Published {{ post.publish }} by {{ post.author }}
             </p>
