--- a/01_blog_application/blog/templates/blog/post/detail.html
+++ b/01_blog_application/blog/templates/blog/post/detail.html
@@ -11,7 +11,16 @@
         Share this post
     </a>
 </p>
+<h2>Similar posts</h2>
+ {% for post in similar_posts %}
  <p>
+ <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
+ </p>
+ {% empty %}
+ There are no similar posts yet.
+ {% endfor %}
+<br><br>
+ <p class='tags'>
     <a href="{% url 'blog:post_list' %}">Go to Home</a>
 </p>
 {% with comments.count as total_comments %}
