--- a/01_blog_application/blog/templates/blog/post/list.html
+++ b/01_blog_application/blog/templates/blog/post/list.html
@@ -1,4 +1,5 @@
 {% extends "blog/base.html" %}
+{% load blog_tags %}
 {% block title %}My Blog{% endblock %}
 {% block content %}
 <h1>
@@ -25,7 +26,7 @@
                 Published {{ post.publish }} by {{ post.author }}
             </p>
             <div class="post-body">
-                {{ post.body|truncatewords:30|linebreaks }}
+                {{ post.body|markdown|truncatewords_html:30 }}
             </div>
         </article>
     {% endfor %}
