--- a/01_blog_application/blog/templates/blog/base.html
+++ b/01_blog_application/blog/templates/blog/base.html
@@ -16,9 +16,17 @@
             {% endblock %}
         </div>
         <div id="sidebar">
-            <h2>My blog</h2>
+            <h2>Search Blog</h2>
+            <div class="form-container">
+                <form method="get" id="search-form">
+                    <div class="form-group">
+                        <input type="text" name="query" class="form-input" placeholder="Search posts...">
+                    </div>
+                    <input type="submit" value="Search" class="form-button">
+                </form>
+            </div>
             <p class="alert">
-            I've written {% total_posts %} posts so far.
+                I've written {% total_posts %} posts so far.
             </p>
             <h3>Latest posts</h3>
             {% show_latest_posts 4 %}
@@ -27,11 +35,29 @@
             <ul class="latest-posts-list">
                 {% for post in most_commented_posts %}
                 <li>
-                <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
+                    <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
                 </li>
                 {% endfor %}
             </ul>
         </div>
     </div>
+    <script>
+        document.getElementById('search-form').addEventListener('submit', function(e) {
+            e.preventDefault(); // Prevent form from submitting normally
+            const query = this.querySelector('input[name="query"]').value;
+            const url = "{% url 'blog:post_search' %}?query=" + encodeURIComponent(query);
+
+            fetch(url, {
+                headers: {
+                    'X-Requested-With': 'XMLHttpRequest' // Indicate this is an AJAX request
+                }
+            })
+            .then(response => response.text())
+            .then(html => {
+                document.getElementById('content').innerHTML = html; // Replace the content section
+            })
+            .catch(error => console.error('Error:', error));
+        });
+    </script>
 </body>
 </html>
