--- a/02_social_application/account/templates/base.html
+++ b/02_social_application/account/templates/base.html
@@ -3,15 +3,15 @@
 <html>
 <head>
  <title>{% block title %}{% endblock %}</title>
- <link href="{% static 'css/base.css' %}" rel="stylesheet">
+ <link href="{% static "css/base.css" %}" rel="stylesheet">
 </head>
 <body>
- <div class="header">
-  <span class="logo">Bookmarks</span>
+ <div id="header">
+ <span class="logo">Bookmarks</span>
  </div>
- <div class="main-content">
-  {% block content %}
-  {% endblock %}
+ <div id="content">
+ {% block content %}
+ {% endblock %}
  </div>
 </body>
 </html>
