--- a/02_social_application/account/static/css/base.css
+++ b/02_social_application/account/static/css/base.css
@@ -43,7 +43,7 @@ a {
 
 a:hover {
     background-color: rgba(255, 255, 255, 0.2);
-    color: white;
+    color: var(--secondary-blue);
     border-radius: 4px;
 }
 
@@ -119,7 +119,7 @@ ol {
 }
 
 #header a:hover {
-    color: white;
+    color: rgb(248, 248, 248);
     background-color: rgba(255, 255, 255, 0.2);
 }
 
