--- a/02_social_application/account/templates/registration/login.html
+++ b/02_social_application/account/templates/registration/login.html
@@ -12,11 +12,16 @@
   {% else %}
   {% endif %}
   <div class="login-form">
-    <form action="{% url 'login' %}" method="post" novalidate>
+    <form action="{% url 'login' %}" method="post">
       {{ form.as_p }}
       {% csrf_token %}
       <input type="hidden" name="next" value="{{ next }}" />
       <p><input type="submit" value="Log-in"></p>
     </form>
+    <p>
+      <a href="{% url "password_reset" %}">
+        Forgotten your password?
+      </a>
+    </p>
   </div>
 {% endblock %}
