--- a/02_social_application/account/templates/registration/login.html
+++ b/02_social_application/account/templates/registration/login.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Log-in{% endblock %}
+{% block title %}LOGIN{% endblock %}
 
 {% block content %}
   <h1>Log-in</h1>
@@ -12,13 +12,17 @@
   {% else %}
   {% endif %}
   <div class="login-form">
-    <form action="{% url 'login' %}" method="post">
+    <form action="{% url 'login' %}" method="post" novalidate>
       {{ form.as_p }}
       {% csrf_token %}
       <input type="hidden" name="next" value="{{ next }}" />
       <p><input type="submit" value="Log-in"></p>
     </form>
     <p>
+      If you don't have an account <a href="{% url "register" %}">register here</a>.
+     </p>
+    <p>
+      If your forget your password, you can reset it by clicking the link below:
       <a href="{% url "password_reset" %}">
         Forgotten your password?
       </a>
