📝 Django Social Authentications

--- a/02_social_application/account/templates/registration/login.html
+++ b/02_social_application/account/templates/registration/login.html
@@ -3,6 +3,15 @@
 {% block title %}LOGIN{% endblock %}
 
 {% block content %}
+<div class="social">
+  <ul>
+  <li class="google">
+  <a href="{% url "social:begin" "google-oauth2" %}">
+  Sign in with Google
+  </a>
+  </li>
+  </ul>
+</div>
   <h1>Log-in</h1>
   {% if form.errors %}
     <p>
