--- a/02_social_application/account/templates/base.html
+++ b/02_social_application/account/templates/base.html
@@ -47,6 +47,7 @@
     {% block content %}
     {% endblock %}
   </div>
+  <script src="//cdn.jsdelivr.net/npm/js-cookie@3.0.5/dist/js.cookie.min.js"></script>
   <script>
     document.addEventListener('DOMContentLoaded', function() {
         const closeButtons = document.querySelectorAll('.close');
@@ -57,6 +58,12 @@
             });
         });
     });
+    const csrftoken = Cookies.get('csrftoken');
+    document.addEventListener('DOMContentLoaded', (event) => {
+      // DOM loaded
+      {% block domready %}
+      {% endblock %}
+    })
     </script>
 </body>
 </html>
